<resources>
    <string name="app_name">Lima\'s guide</string>
    <string name="landmark_plaza_armas_title">Plaza de Armas</string>
    <string name="landmark_plaza_armas_description">
        The Plaza de Armas, also known as the Plaza Mayor, sits at the heart of Lima\'s historic center, one of the few remaining parts of the city that still gives a sense of the city’s colonial past. Acknowledged for its historical and cultural significance by being awarded UNESCO World Heritage status in 1988, this is the spot where Francisco Pizarro founded the city in 1535. A colonial fountain serves as the square\'s centerpiece, while some of Lima\'s most important buildings surround the historic plaza.
    </string>
    <string name="landmark_plaza_armas_location">Cercado de Lima 15001</string>
    <string name="landmark_plaza_armas_hours">N/A</string>
    <string name="landmark_plaza_armas_url">
        https://www.tripadvisor.com/Attraction_Review-g294316-d311625-Reviews-Plaza_de_Armas_Plaza_Mayor-Lima_Lima_Region.html
    </string>
    <string name="landmark_circuito_title">Circuito Mágico del Agua</string>
    <string name="landmark_circuito_description">
        Lima\'s Parque de la Reserva (Park of the Reserve) dates back to the late 1920s, but in 2007, the Municipality of Lima completed the construction of El Circuito Mágico del Agua, the "Magic Water Circuit." Thirteen fountains, some of which are interactive, provide plenty of entertainment, especially at night with the illuminated shows. Kids will love it, but be prepared to get wet; take a plastic bag or two to keep your cash and camera dry.
    </string>
    <string name="landmark_circuito_location">Avenida Petit Thouars cuadra 5. Cercado de Lima.</string>
    <string name="landmark_circuito_hours">Tuesday to Sunday:\n3:00PM - 10:30PM</string>
    <string name="landmark_circuito_url">
        https://www.tripadvisor.com/Attraction_Review-g294316-d1422223-Reviews-Circuito_Magico_del_Agua-Lima_Lima_Region.html
    </string>
    <string name="landmark_miraflores_title">Miraflores</string>
    <string name="landmark_miraflores_description">
        Miraflores is one of Lima\'s most upscale districts, chock full of fancy bars, stylish restaurants, and trendy discotecas. Parque Kennedy is the central point of the neighborhood and perfect for a spot of people watching – or cat admiring. It\'s home to a population of convivial cats, most of which were abandoned and now cared for by a local NGO, so don\’t be surprised if you make more than a few new friends here.
    </string>
    <string name="landmark_miraflores_location">Miraflores 15074</string>
    <string name="landmark_miraflores_hours">N/A</string>
    <string name="landmark_miraflores_url">
       https://www.tripadvisor.com/Attraction_Review-g294316-d311718-Reviews-Miraflores-Lima_Lima_Region.html
    </string>
    <string name="landmark_barranco_title">Barranco</string>
    <string name="landmark_barranco_description">
        Head south along the coast from Miraflores, and you\'ll end up in the small district of Barranco. This is Lima\'s bohemian quarter, a place for poets, artists, and the city’s alternative crowd. A daytime stroll will take you past stylish cafes and a wealth of fairs selling handmade, and often fair-trade, food and crafts, most of which are made by local designers or come from around the country. Don\'t miss El Puente de Los Suspiros (The Bridge of Sighs), a quaint wooden bridge located at the top of the stone steps that wind down to the beaches below Barranco.
    </string>
    <string name="landmark_barranco_location">Barranco District 15063</string>
    <string name="landmark_barranco_hours">N/A</string>
    <string name="landmark_barranco_url">
       https://www.tripadvisor.com/Attraction_Review-g294316-d548265-Reviews-Barranco-Lima_Lima_Region.html
    </string>
    <string name="landmark_cerro_cristobal_title">Cerro San Cristobal</string>
    <string name="landmark_cerro_cristobal_description">
        One of Lima\'s most prominent landmarks, the hill of Cerro San Cristóbal, rises to the northeast of downtown Lima. If you want a panoramic view of the city, this is where to go. Take a taxi or a tour bus from the Plaza de Armas (walking here isn’t particularly safe). From the top, you can see right across the city and all the way out to sea—at least on a clear day. Thick coastal fog can severely obscure the view, so pick your moment wisely, while a tour in the late afternoon allows for views enhanced by the twinkling lights of the city below.
    </string>
    <string name="landmark_cerro_cristobal_location">Cercado de Lima</string>
    <string name="landmark_cerro_cristobal_hours">N/A</string>
    <string name="landmark_cerro_cristobal_url">
       https://www.tripadvisor.com/Attraction_Review-g294316-d6600215-Reviews-Cerro_San_Cristobal-Lima_Lima_Region.html
    </string>
    <string name="landmark_plaza_martin_title">Plaza San Martin</string>
    <string name="landmark_plaza_martin_description">
        The Plaza San Martín is one of the most representative public spaces of the city of Lima, Peru. It is located at the ninth block of Colmena avenue, within the Historic Centre of Lima which was declared a World Heritage Site in 1988 by UNESCO. It is located near the Plaza Mayor of Lima and is connected to it by the Jiron de la Union. Its central monument gives homage to Peru\'s liberator, José de San Martín.
    </string>
    <string name="landmark_plaza_martin_location">Lima District 15001</string>
    <string name="landmark_plaza_martin_hours">N/A</string>
    <string name="landmark_plaza_martin_url">
       https://www.tripadvisor.com/Attraction_Review-g294316-d548262-Reviews-Plaza_San_Martin-Lima_Lima_Region.html
    </string>
    <string name="restaurant_central_title">Central</string>
    <string name="restaurant_central_description">
        Currently the undisputed brightest star in Peru\'s culinary universe, Central has been repeatedly ranked Latin America\'s best restaurant.Chef Virgilio Martínez\'s philosophy reclaims the pre-Colombian tradition of barter and exchange between communities from the coast, mountains and rainforest, featuring ingredients from altitudes as high as 12,000 feet to below sea level. From the high Andes, Martínez will serve guests a selection of Peruvian potatoes garnished with muña, a kind of Andean mint, and alpaca heart shavings.At the other end of the altitudinal spectrum, who knew that scallops, spiced up with Peruvian rocoto peppers, could be turned into a crust with a meringue-like texture?
    </string>
    <string name="restaurant_central_location">Av. Pedro de Osma 301\nBarranco</string>
    <string name="restaurant_central_phone">+51 1 2428515</string>
    <string name="restaurant_central_hours">Monday to Saturday:\n12:45 - 1:30PM / 7:45 - 8:30PM</string>
    <string name="restaurant_central_url">
       https://www.tripadvisor.com/Restaurant_Review-g294316-d1798176-Reviews-Central_Restaurante-Lima_Lima_Region.html
    </string>
    <string name="restaurant_maido_title">Maido</string>
    <string name="restaurant_maido_description">
        The name means \"welcome\" in Japanese and this restaurant from chef Mitsuharu Tsumura is the apogee of Japanese-Peruvian, aka "Nikkei" cuisine. This fusion dates back more than a century thanks to the Andean nation\'s large community of immigrants from the Land of the Rising Sun. Maido is, according to the 2017 San Pellegrino rankings, not just Latin America\'s second best restaurant but also number eight in the world. The menu runs from conventionally exquisite Japanese sushi classics to original creations such as cau cau, a pre-Colombian potato stew, but served with sea snails.
    </string>
    <string name="restaurant_maido_location">Calle San Martin 399\nMiraflores</string>
    <string name="restaurant_maido_phone">+51 1 3135100</string>
    <string name="restaurant_maido_hours">Monday to Saturday:\n7:00AM - 10:00PM</string>
    <string name="restaurant_maido_url">
       https://www.tripadvisor.com/Restaurant_Review-g294316-d1759465-Reviews-Maido-Lima_Lima_Region.html
    </string>
    <string name="restaurant_malabar_title">Malabar</string>
    <string name="restaurant_malabar_description">
       This is the highly rated locale of Pedro Miguel Schiaffino, a chef particularly known for his use of exotic ingredients from the Amazon.Malabar is also home to a bar that\'s been ranked in the world\'s top 10, should you be in the mood for an aperitif before your meal. These days Schiaffino, like Osterling, is a little more focused on satisfying his customers than garnering critical plaudits, offering "casual cuisine, with a simple spirit and the warmth of home."In practice that doesn\'t, however, mean anything less than spectacularly original fare, from smoked paiche, the largest fish in the Amazon, served with black chili sauce and yucca puree, to grilled octopus with lima beans and parmesan shavings.
    </string>
    <string name="restaurant_malabar_location">Av. Camino Real 101\nSan Isidro</string>
    <string name="restaurant_malabar_phone">+51 1 4405200</string>
    <string name="restaurant_malabar_hours">Monday to Friday:\n12:30 - 4:00PM / 7:00 – 11:30PM\nSaturday:\n12:30 - 4:00PM / 7:30PM - 12:00AM </string>
    <string name="restaurant_malabar_url">
       https://www.tripadvisor.com/Restaurant_Review-g294316-d789641-Reviews-Malabar-Lima_Lima_Region.html
    </string>
    <string name="restaurant_lamar_title">La Mar</string>
    <string name="restaurant_lamar_description">
       If Peru has a national dish, then it\'s ceviche, the fresh seafood salad marinated in lemon juice and sold in specialist restaurants, cevicherias, even in the Andes. No cevicheria is more famous than La Mar -- the name translates to "the high seas" -- the second flagship eatery of Gastón Acurio. Like all cevicherias, La Mar doesn\'t just offer a variety of ceviches, but also numerous other versions of Peru\'s many original fish and shellfish classics. A bottle of white wine is a perfect accompaniment but the classic Peruvian way to eat ceviche is washed down with a local, very cold lager.
    </string>
    <string name="restaurant_lamar_location">Av Mariscal La Mar 770\nMiraflores</string>
    <string name="restaurant_lamar_phone">+51 1 4213365</string>
    <string name="restaurant_lamar_hours">Monday to Thursday:\n12:00 - 5:00PM\nFriday to Sunday:\n12:00 - 5:30PM </string>
    <string name="restaurant_lamar_url">
        https://www.tripadvisor.com/Restaurant_Review-g294316-d779051-Reviews-La_Mar-Lima_Lima_Region.html
    </string>
    <string name="restaurant_picanteria_title">La Picantería</string>
    <string name="restaurant_picanteria_description">
       Another of Lima\'s highest-ranked restaurants, this one offers cuisine from Arequipa, Peru\'s picturesque third city nestled in the southern Andean foothills. There, "picanterias," which typically only open for lunch, are a way of life, with dishes ranging from seafood to the decidedly meaty, especially chicharron, aka fried pork, a Peruvian classic. Dishes to look out for include the beef ribs, a crab parihuela or stew, and the rocoto en chupe, a soup a little reminiscent of a chowder using one of Peru\'s hottest native chili peppers.
    </string>
    <string name="restaurant_picanteria_location">Sta Rosa 388\nSurquillo</string>
    <string name="restaurant_picanteria_phone">+51 1 2416676</string>
    <string name="restaurant_picanteria_hours">Monday to Saturday:\n10:30AM - 5:30PM </string>
    <string name="restaurant_picanteria_url">
        https://www.tripadvisor.com/Restaurant_Review-g294316-d3781380-Reviews-La_Picanteria-Lima_Lima_Region.html
    </string>
    <string name="restaurant_titi_title">Chifa Titi</string>
    <string name="cost_high">$$$</string>
    <string name="map">Map</string>
    <string name="reviews">Reviews</string>
</resources>