<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card-view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    card-view:cardCornerRadius="2dp"
    card-view:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/container_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/place_image_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/landmarks_circuito_magico" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_image_view"
            android:layout_toLeftOf="@id/expand_image_view"
            android:layout_alignParentLeft="true"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:text="@string/landmark_circuito_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cost_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_high"
            android:paddingLeft="8dp"
            android:paddingTop="14dp"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:layout_toLeftOf="@id/expand_image_view"
            android:layout_below="@id/place_image_view"/>

        <ImageView
            android:id="@+id/expand_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_image_view"
            android:layout_alignParentRight="true"
            android:padding="12dp"
            android:src="@drawable/arrow_down" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/TextStyleDescription"
            android:layout_below="@+id/title_text_view"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/landmark_circuito_description" />

        <View
            android:id="@+id/line_middle_view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/description_text_view"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/details_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_middle_view"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/location_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/gps_image_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/location_text_view"
                    style="@style/TextStyleDetails"
                    android:gravity="center_vertical"
                    android:text="@string/landmark_circuito_location" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/telephone_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/telephone_image_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/phone" />

                <TextView
                    android:id="@+id/telephone_text_view"
                    style="@style/TextStyleDetails"
                    android:text="933082956" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hours_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hours_image_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:padding="2dp"
                    android:src="@drawable/hours" />

                <TextView
                    android:id="@+id/hours_text_view"
                    style="@style/TextStyleDetails"
                    android:layout_weight="8"
                    android:text="@string/landmark_circuito_hours" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/line_bottom_view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/details_linear_layout"
            android:background="@color/divider" />

        <android.support.design.button.MaterialButton
            android:id="@+id/map_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_bottom_view"
            android:layout_alignParentLeft="true"
            android:background="@android:color/white"
            android:text="@string/map"
            android:textSize="14sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/reviews_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_bottom_view"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/map_button"
            android:background="@android:color/white"
            android:text="@string/reviews"
            android:textSize="14sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
